add project dependencies

--- a/build.gradle
+++ b/build.gradle
@@ -5,3 +5,18 @@ plugins {
 application {
     mainClass = 'javacat.Main'
 }
+
+repositories {
+    mavenCentral()
+}
+
+dependencies {
+    implementation('commons-cli:commons-cli:1.6.0')
+    testImplementation(platform('org.junit:junit-bom:5.10.2'))
+    testImplementation('org.junit.jupiter:junit-jupiter')
+    testRuntimeOnly('org.junit.platform:junit-platform-launcher')
+}
+
+test {
+    useJUnitPlatform()
+}
